Add multi-AI provider support (OpenAI, Claude, Perplexity, Mistral)
- Added ai_provider.py with AIProvider abstraction layer
- Updated brief_generator.py to use AIProvider instead of direct OpenAI calls
- Modified main.py to include provider selection UI in workflow
- Updated .env.example with all four AI provider API keys
- Added anthropic dependency to requirements.txt
- Updated README.md with comprehensive multi-provider documentation
- Users can now choose their preferred AI provider at runtime
- Supports OpenAI GPT-4o, Claude 3.5 Sonnet, Perplexity Sonar Large, and Mistral Large

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
+# AI Provider API Keys (choose one or multiple)
 OPENAI_API_KEY=your_openai_api_key_here
+CLAUDE_API_KEY=your_claude_api_key_here
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
+MISTRAL_API_KEY=your_mistral_api_key_here
+
+# Default AI Provider (openai, claude, perplexity, or mistral)
+DEFAULT_AI_PROVIDER=openai
+
+# WordPress Integration (optional - for direct publishing)
+WP_BASE_URL=your_wordpress_url_here
+WP_USERNAME=your_wp_username_here
+WP_APP_PASSWORD=your_wp_app_password_here
+
+# Context7 (optional - for enhanced documentation access)
+CONTEXT7_API_KEY=your_context7_api_key_here
+
+# Bright Data (optional - for web scraping research)
+BRIGHT_DATA_API_KEY=your_bright_data_api_key_here
