--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-python-docx>=1.1.0
-openai>=1.0.0
-anthropic>=0.18.0
-requests>=2.31.0
-python-dotenv>=1.0.0
-streamlit>=1.28.0
-supabase>=2.0.0
+streamlit==1.31.0
+python-docx==1.1.0
+python-dotenv==1.0.1
+openai==1.12.0
+anthropic==0.18.1
+supabase==2.3.4
